<?xml version="1.0" encoding="utf-8"?>
<!--
  Licensed to UbiCollab.org under one or more contributor
  license agreements.  See the NOTICE file distributed 
  with this work for additional information regarding
  copyright ownership. UbiCollab.org licenses this file
  to you under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance
  with the License. You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->
<resources>

    <string name="app_name">Valens Test</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_related">Related people</string>
    <string name="title_activity_write_name">WriteName</string>
    <string name="general_hi">Hello!</string>
    <string name="write_name_your_name_query">What is your name?</string>
    <string name="write_name_write_name">Name</string>
    <string name="general_button">Click here</string>
    <string name="title_activity_mainscreen">Mainscreen</string>
    <string name="title_activity_eventlist">Eventlist</string>
    <string name="title_activity_eventdetail">EventDetail</string>
    <string name="greeting">Hello</string>
    <string name="eventdetail_delete">Remove it</string>
    <string name="eventdetail_keep">Keep it</string>
    <string name="contact_added">Added contact</string>
    <string name="eventdetail_do_with_event">What do you want to do with this message?</string>
    <string name="general_lorem_short">Lorem ipse dolet</string>
    <string name="general_lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam placerat dui quam, quis varius lacus. Phasellus non tristique sapien. Vestibulum hendrerit, sapien non euismod venenatis, tortor purus pulvinar lacus, a pharetra turpis leo ac nibh. Nulla eu eros sed lorem imperdiet sollicitudin.</string>
    <string name="no_events">You have no messages!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_related">Related</string>
    <string name="main_got_new_events">You got new events. Click the smiley to see them.</string>

    <string-array name="time_period_array">
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>

    <string name="statistics_x_label_hours">Hours ago</string>
    <string name="statistics_x_label_days">Day ago</string>
    <string name="statistics_y_label_steps">Steps</string>
    <string name="statistics_y_label_gait_s">Gait speed</string>
    <string name="statistics_y_label_gait_v">Gait variability</string>
    <string name="new_name_button">New Name</string>
    <string name="contact_person_activity">Contact person</string>
    <string name="new_contact_activity">Add new contact</string>
    <string name="contact_person">Contact person</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="contact_person_store_info">Save</string>
    <string name="contact_people">Contact persons</string>
    <string name="related_add_contact">Add contact</string>
    <string name="new_contact_create_new_contact">Create new contact</string>
    <string name="messages_face_display">A face that displays your status</string>
    <string name="w_new_events">Click here!</string>
    <string name="add_contact_confirm_dialogue_text_1">Do you want to add</string>
    <string name="GENERAL_positive">Yes</string>
    <string name="GENERAL_negative">No</string>
    <string name="add_contact_confirm_dialogue_text_2">as a contact?</string>
    <string name="set_name">Set name</string>
    <string name="preferences_program_settings">Program settings</string>
    <string name="preferences_name_title">Change Name</string>
    <string name="preferences_name_summary">Click here to change your name</string>
    <string name="preferences_clear_history_warning">Do you really want to clear all the data from the application?</string>
    <string name="preferences_data_cleared">Cleared history!</string>
    <string name="preferences_clear_history_title">Clear History</string>
    <string name="preferences_clear_history_summary">Click here to clear history</string>
    <string name="title_activity_create_contact">Create Contact</string>
    <string name="contact_person_delete_info">Delete contact</string>
    <string name="contact_person_delete_dialogue_1">Are you sure that you want to remove</string>
    <string name="contact_person_delete_dialogue_2">from your contact list?</string>

    <string-array name="data_type_array">
        <item>Steps</item>
        <item>Gait Speed</item>
        <item>Gait Variability</item>
    </string-array>

    <string name="event_list_goodJob_title">Good job!</string>
    <string name="event_list_badJob_title">You need to move more!</string>
    <string name="event_list_noChange_title">No change</string>
    <string name="event_list_goodJob_desc">Yesterday you moved more than the day before, good job! </string>
    <string name="event_list_badJob_desc">Yesterday you moved less than the day before, try harder! </string>
    <string name="event_list_noChange_desc">You have moved neither more or less lately. </string>
    <string name="event_list_warning_title">Warning!</string>
    <string name="event_list_warning_description">We have detected an anomaly in your gait pattern that puts you in risk for falling. We recommend that you discuss this with a medical advisor.</string>
    <string name="event_desc_two_params">You walked \%%1 steps yesterday, while you walked \%%2 steps the day before.</string>
    <string name="event_null_parameter">an unknown amount</string>
    <string name="notifcation_number">You have \%%1 notifications!</string>

</resources>
