<!--
  Licensed to UbiCollab.org under one or more contributor
  license agreements.  See the NOTICE file distributed 
  with this work for additional information regarding
  copyright ownership. UbiCollab.org licenses this file
  to you under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance
  with the License. You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preferences_program_settings">
        
        <EditTextPreference 
            android:key="name"
            android:title="@string/preferences_name_title"
            android:summary="@string/preferences_name_summary" />
        
        <no.ntnu.stud.fallprevention.activity.ClearHistory
            android:title="@string/preferences_clear_history_title"
            android:summary="@string/preferences_clear_history_summary" />
        
    </PreferenceCategory>
    
</PreferenceScreen>
